# miguelsb

./: .gitignore  PORTFOLIO_IMPROVEMENT.md  auth_flow.md  context.md  db.sqlite3  dev-logs.sh  dev-start.sh  dev-status.sh  dev-stop.sh  docker-compose.yml  notes.txt  nuxt_magic_integrations.md  planejamento.md  portfolio.md  pyproject.toml
api/: models.py
api/migrations/: 0001_initial.py
api/models/: certification.py  project.py  site_stat.py
api/serializers/: project.py
api/views/: site_stat_viewset.py
backend/: Dockerfile  pyproject.toml
backend/api/: admin.py  tests.py  urls.py
backend/api/models/: __init__.py  project.py
backend/api/serializers/: __init__.py  certification.py  site_stat.py
backend/api/views/: __init__.py  certification_viewset.py  project_viewset.py
backend/core/: settings.py
core/: settings.py
docs/: projects.md
frontend/: Dockerfile  eslint.config.mjs  eslint.config.ts  nuxt.config.ts  package.json  vite.config.ts
frontend/app/: router.options.ts
frontend/app/composables/: useAPI.ts  useCollectUserInfo.ts  useFetchIncrementCounter.ts
frontend/app/layouts/: default.vue
frontend/app/views/: HomePage.vue  ProjectDetailsPage.vue  ProjectsPage.vue
frontend/src/: App.vue  main.ts
frontend/src/composables/:  useIndex.ts  useCollectUserInfo.ts  useFetchIncrementCounter.ts  useNotify.ts
frontend/src/data/: projects.ts
frontend/src/layouts/: DefaultFooter.vue  DefaultLayout.vue  DefaultNavbar.vue
frontend/src/router/: index.ts
frontend/src/types/: project.ts
frontend/src/utils/: generators.ts  linkUtils.ts
(+19 files in other folders)
